--- a/style.css
+++ b/style.css
@@ -5,3 +5,21 @@ h1{
 body{
     background-color: coral;
 }
+
+div.bit{
+  text-align: end;
+}
+
+div.eth{
+    background-color: aliceblue;
+    position: relative 
+}
+
+p{
+    background-color: yellow;
+    text-align: center;
+}
+
+input.color{
+    color: red;
+}
